--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <title>NekoBaba</title>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script>
             MathJax = {
@@ -8,14 +10,21 @@
                 inlineMath: [['$', '$']]
               }
             };
-          </script>
+        </script>
+        <link rel="stylesheet" href="css/neko.css">
     </head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-Here is the Cauchy-Schwarz inequality:
-$$
-\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
-$$
-</body>
+    <body>
+      <h1>Hello World</h1>
+      <p>I'm hosted with GitHub Pages.</p>
+      <p>Here is the Cauchy-Schwarz inequality:
+      $$
+      \left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
+      $$
+      </p>
+      <hr align="center" width="50%">
+      <p>A <em>UTF-8</em> string: 😀🌸你好Приветשלוםمرحبا</p>
+      <script>
+        document.write("last modified: " + document.lastModified);
+      </script>
+    </body>
 </html>
