--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       \left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
       $$
       </p>
-      <hr style="width: 50%; text-align:center;";>
+      <hr style="width: 50%; text-align:center;">
       <p>A <em>UTF-8</em> string: 😀🌸你好Приветשלוםمرحبا</p>
       <script>
         document.write("last modified: " + document.lastModified);
